добавление логики 8 спринта:пересечение по времени,тесты